<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.febrildur</groupId>
	<artifactId>SieveEditor</artifactId>
	<version>0.9.3-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>SieveEditor</name>
	<description>Desktop application for editing and managing Sieve mail filter scripts on ManageSieve servers</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<mockito.version>5.20.0</mockito.version>

		<!-- SonarCloud configuration -->
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>lenucksi</sonar.organization>
		<!-- <sonar.projectKey>lenucksi_SieveEditor</sonar.projectKey> -->
		<!-- JaCoCo coverage report location for SonarCloud -->
		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/lenucksi/SieveEditor.git</connection>
		<developerConnection>scm:git:https://github.com/lenucksi/SieveEditor.git</developerConnection>
		<url>https://github.com/lenucksi/SieveEditor</url>
		<tag>HEAD</tag>
	</scm>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>de.febrildur.sieveeditor.Application</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Surefire for test execution -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!-- Use @{argLine} for late binding - allows JaCoCo to inject its agent -->
					<argLine>@{argLine} -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
				</configuration>
			</plugin>

			<!-- JaCoCo for code coverage -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<!-- Plugin management for version locking -->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>5.4.0.6343</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.fifesoft/rsyntaxtextarea -->
		<dependency>
			<groupId>com.fifesoft</groupId>
			<artifactId>rsyntaxtextarea</artifactId>
			<version>3.6.0</version>
		</dependency>
		<!-- FlatLaf: Modern look-and-feel with automatic HiDPI scaling
		     Benefits: Native 4K support without launcher script, dark mode, modern UI
		     Source: https://www.formdev.com/flatlaf/ -->
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.7</version>
		</dependency>
		<!-- ManageSieveJ: Java 21 compatible fork from lenucksi (via JitPack)
		     Source: https://github.com/lenucksi/managesievej
		     Benefits: Java 21+ support, bug fixes, modernized build
		     JitPack builds from GitHub releases automatically -->
		<dependency>
			<groupId>com.github.lenucksi</groupId>
			<artifactId>ManageSieveJ</artifactId>
			<version>managesievej-v0.3.8</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
			<version>1.9.3</version>
		</dependency>

		<!-- Credential Storage Libraries -->
		<!-- KeePassXC integration for secure password storage -->
		<dependency>
			<groupId>org.purejava</groupId>
			<artifactId>keepassxc-proxy-access</artifactId>
			<version>1.3.0</version>
		</dependency>
		<!-- OS keychain integration (Windows Credential Manager, macOS Keychain, Linux Secret Service) -->
		<dependency>
			<groupId>com.github.javakeyring</groupId>
			<artifactId>java-keyring</artifactId>
			<version>1.0.4</version>
		</dependency>
		<!-- Cross-platform directory paths (XDG Base Directory, AppData, Application Support) -->
		<dependency>
			<groupId>net.harawata</groupId>
			<artifactId>appdirs</artifactId>
			<version>1.5.0</version>
		</dependency>
		<!-- SLF4J simple binding (keepassxc-proxy-access uses SLF4J for logging) -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>2.0.17</version>
		</dependency>

		<!-- Test Dependencies -->
		<!-- JUnit 5 -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.1</version>
			<scope>test</scope>
		</dependency>

		<!-- Mockito for mocking -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- AssertJ for fluent assertions -->
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.6</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
